tests/ui/cilk/liveness/matching_on_spawned_expression.stderr
error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/matching_on_spawned_expression.rs:6:11
   |
LL |     let x: Option<usize> = cilk_spawn { None };
   |         -                             -------- binding initialized here in some conditions
   |         |
   |         binding declared here but left uninitialized
LL |     match x {
   |           ^ `x` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
